# BenchSUITE

benchmark_suite/: Cargo.toml  README.md
benchmark_suite/src/: cpu_bench.rs  disk_bench.rs  gpu_bench.rs  main.rs  net_bench.rs  ram_bench.rs
benchmark_suite/src/ui/: mod.rs
tests/: cli.rs
